infra-terraform/modules/alb/main.tf
data "aws_route53_zone" "this" {
  zone_id = var.zone_id
}

locals {
  root_domain = trimsuffix(data.aws_route53_zone.this.name, ".")
}

resource "aws_lb" "this" {
  name               = "${var.name_prefix}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [var.alb_security_group_id]
  subnets            = var.public_subnet_ids

  tags = merge(var.tags, { Name = "${var.name_prefix}-alb" })
}

resource "aws_lb_target_group" "orderbot" {
  name        = "${var.name_prefix}-orderbot-tg"
  port        = var.order_bot_port
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = var.vpc_id

  health_check {
    path                = "/orderbot/health/chk"
    matcher             = "200-202" # Define what HTTP status codes are treated as success
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }

  tags = var.tags
}

resource "aws_lb_target_group" "orderbot_mgmt" {
  name        = "${var.name_prefix}-orderbot-mgmt-tg"
  port        = var.order_bot_mgmt_port
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = var.vpc_id

  health_check {
    path                = "/orderbotmgmt/health/chk"
    matcher             = "200-202" # Define what HTTP status codes are treated as success
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }

  tags = var.tags
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.this.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
  certificate_arn   = var.acm_certificate_arn

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "Not found"
      status_code  = "404"
    }
  }
}

resource "aws_lb_listener" "http_redirect" {
  load_balancer_arn = aws_lb.this.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_listener_rule" "orderbot_mgmt_by_host" {
  listener_arn = aws_lb_listener.https.arn
  priority     = 10

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.orderbot_mgmt.arn
  }

  condition {
    host_header { # host_header: the domain name from an HTTP request
      values = ["${var.orderbot_mgmt_host}.${local.root_domain}"]
    }
  }
}

resource "aws_lb_listener_rule" "orderbot_by_host" {
  listener_arn = aws_lb_listener.https.arn
  priority     = 20

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.orderbot.arn
  }

  condition {
    host_header { # host_header: the domain name from an HTTP request
      values = ["${var.orderbot_host}.${local.root_domain}"]
    }
  }
}
